# Sindri

./: CMakeLists.txt  README.md  vcpkg.json
lua/: coolNoise.lua  perlin.lua  worley.lua
shaders/: raymarch.frag  raymarch.vert
src/: CMakeLists.txt  main.cpp  pch.hpp
src/Application/: CMakeLists.txt  Sindri.cpp  Sindri.hpp
src/CompositionStack/: CMakeLists.txt  CompositionStack.cpp  CompositionStack.hpp  StackEntry.cpp  StackEntry.hpp
src/DI/: CMakeLists.txt  SindriInjector.cpp  SindriInjector.hpp
src/GpuPreviewTexture/: CMakeLists.txt  IGpuPreviewTexture.hpp  OpenGLPreviewTexture.cpp  OpenGLPreviewTexture.hpp
src/GraphicsContext/: GraphicsContextFactory.cpp  GraphicsContextFactory.hpp  IGraphicsContext.hpp  IGraphicsContextFactory.hpp  OpenGLContext.cpp  OpenGLContext.hpp
src/Gui/: CMakeLists.txt  ISindriGui.hpp  SindriGui.cpp  SindriGui.hpp
src/Gui/Helpers/: ImGuiHelper.hpp
src/Gui/ImGui/: CMakeLists.txt  IImGuiLayer.hpp  IImGuiLayerFactory.hpp  ImGuiLayerFactory.cpp  ImGuiLayerFactory.hpp  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.hpp
src/Gui/NodeEditor/: CMakeLists.txt  INodeEditor.hpp  NodeEditor.cpp  NodeEditor.hpp
src/Gui/NodeEditor/Nodes/: DecomposeNode.hpp  MathNodes.hpp  NodeTypes.hpp  OutputNode.hpp  ScriptNode.hpp  UVNode.hpp
src/Helper/: CoordinateHelper.hpp  FileHelper.hpp
src/Helpers/: UI.hpp
src/ImageWriting/: PngWriter.hpp  ShaderHelper.hpp  TgaWriter.hpp
src/NoiseGenerator/: CMakeLists.txt  NoiseGenerator.cpp  NoiseGenerator.hpp
src/NoiseLayer/: CMakeLists.txt  INoiseLayer.hpp  INoiseLayerFactory.hpp  NoiseLayer.cpp  NoiseLayer.hpp  NoiseLayerFactory.cpp  NoiseLayerFactory.hpp
src/ProceduralTexture/: CMakeLists.txt  ProceduralTexture.cpp  ProceduralTexture.hpp
src/TextureBuffer/: CMakeLists.txt  ITextureBuffer.hpp  TextureBuffer.cpp  TextureBuffer.hpp
src/TextureExporter/: CMakeLists.txt  ITextureExporter.hpp  TextureExporter.cpp  TextureExporter.hpp
src/TexturePipeline/: CMakeLists.txt  ITexturePipeline.hpp  TexturePipeline.cpp  TexturePipeline.hpp
src/TexturePipelineExecutor/: CMakeLists.txt  ITexturePipelineExecutor.hpp  TexturePipelineExecutor.cpp  TexturePipelineExecutor.hpp
src/TexturePreview/: CMakeLists.txt  ITexturePreview.hpp  TexturePreview.cpp  TexturePreview.hpp
src/TextureSettings/: TextureSettings.hpp
src/TextureWriter/: TextureWriter.hpp
src/Utility/: CoordinateHelper.hpp  PngWriter.hpp
src/Window/: CMakeLists.txt  IWindow.hpp  Window.cpp  Window.hpp
